# trakt-tracker

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  config.example.toml  docker-compose.yml  entrypoint.sh  pyproject.toml
.github/workflows/: build-docker-image.yml
examples/: grafana-dashboard.json
src/trakt_tracker/: aggregator.py  auth.py  config.py  exceptions.py  influx_writer.py  logging_setup.py  main.py  models.py  noop_influx_writer.py  state_store.py  sync_engine.py  trakt_client.py
tests/: test_aggregator.py  test_auth.py  test_noop_influx_writer.py  test_state_store.py  test_sync_engine.py
